# easyrice

./: .gitignore  Makefile  README.md  Start.py  Textdraw.py  Textvalues.py  deamon.c  example_commands  example_commands2  example_config  old_command  setup.cfg
src/: Add.py  Config.py  Start.py
src/easyrice/: Add.py  Config.py  Getimage.py  Makeimage.py  Textdraw.py  Textvalues.py  __init__.py  __main__.py  cli.py
src/easyrice_antojoha113.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: image.py
