[metadata]
name = easyrice-antojoha113
version = 0.0.1
author = Anton Johansson
author_email = antojohansson1@gmail.com
description = Easy rice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AntonJoha/easyrice
project_urls =
    Bug Tracker = https://github.com/AntonJoha/easyrice/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
